--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-09  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* m4/libtool.m4: Fix typo: testring -> teststring.
+
 2004-02-06  Scott James Remnant  <scott@netsplit.com>
 
 	* Makefile.am (EXTRA_DIST): No need to specify config.guess
