--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-11  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* m4/libtool.m4: Fix typo: testring -> teststring.
+
 2004-02-11  Gary V. Vaughan  <gary@gnu.org>
 
 	* commit: Mail a nicer commit notification.
