--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-11  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* ltmain.in: Indentation fixes, typo fixes.
+
 2004-02-11  Gary V. Vaughan  <gary@gnu.org>
 
 	* config/mailnotify: New file for mailing commit notifications,
