--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-11  Gary V. Vaughan  <gary@gnu.org>
+
+	* commit: Improve CVS/Root->name sed script to work when :ext: is
+	not shown.
+
 2004-02-11  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4: Fix typo: testring -> teststring.
