--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-11  Gary V. Vaughan  <gary@gnu.org>
+
+	* commit: Completely change CVS/Root->name sed script to actually
+	work when :ext: is not shown.
+
 2004-02-11  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* ltmain.in: Indentation fixes, typo fixes.
