--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-12  Gary V. Vaughan  <gary@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Remove config/mailnotify after all; it
+	is of no use in a distribution tarball.
+
 2004-02-11  Gary V. Vaughan  <gary@gnu.org>
 
 	* commit: Fix cut-n-paste error.
