* commit, mailnotify: Use $progpath as for ltmain.in to work around the IRIX bug described below. Resynch with cvs-utils HEAD.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-12  Gary V. Vaughan  <gary@gnu.org>
+
+	* commit, mailnotify: Use $progpath as for ltmain.in to work
+	around the IRIX bug described below. Resynch with cvs-utils HEAD.
+
 2004-02-12  Albert Chin-A-Young  <china@thewrittenword.com>,
 	    Gary V. Vaughan  <gary@gnu.org>
 
