--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-12  Scott James Remnant  <scott@netsplit.com>
+
+	* ltmain.in: Correct definition of basename sed expression to
+	not include single quotes.
+
 2004-02-12  Gary V. Vaughan  <gary@gnu.org>
 
 	* libtoolize.in: Use $progpath as for ltmain.in to work around the
