--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-12  Scott James Remnant  <scott@netsplit.com>
 
+	* ltmain.in: Fix typo: macro's -> macros.
+
+2004-02-12  Scott James Remnant  <scott@netsplit.com>
+
 	* ltmain.in: Correct definition of basename sed expression to
 	not include single quotes.
 
