--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-12  Scott James Remnant  <scott@netsplit.com>
+
+	* config/mailnotify (func_sendmail): Look for sendmail in a
+	couple of common non-PATH locations as well.
+
 2004-02-12  Gary V. Vaughan  <gary@gnu.org>
 
 	* commit, mailnotify: Use $progpath as for ltmain.in to work
