--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2004-02-12  Scott James Remnant  <scott@netsplit.com>
 
-	* config/mailnotify (func_sendmail): Look for sendmail in a
+	* ltmain.in, libtoolize.in, commit, mailnotify: Remove
+	$SED from definitions of $dirname and $basename and prefix each
+	use with it instead.  Some shells (zsh) treat the expansion as
+	a single command instead of a command with arguments.
+
+2004-02-12  Scott James Remnant  <scott@netsplit.com>
+
+	* mailnotify (func_sendmail): Look for sendmail in a
 	couple of common non-PATH locations as well.
 
 2004-02-12  Gary V. Vaughan  <gary@gnu.org>
