* bootstrap, m4/libtool.m4: Argh, Gary went crazy after cvsapply went crazy and backed out more than he should've.  This patch puts some of it back again.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,20 +1,18 @@
 2004-02-12  Scott James Remnant  <scott@netsplit.com>
 
+	* bootstrap, m4/libtool.m4: Argh, Gary went crazy after cvsapply
+	went crazy and backed out more than he should've.  This patch puts
+	some of it back again.
+
 	* ltmain.in, libtoolize.in, commit, config/mailnotify: Remove
 	$SED from definitions of $dirname and $basename and prefix each
 	use with it instead.  Some shells (zsh) treat the expansion as
 	a single command instead of a command with arguments.
 
-2004-02-12  Scott James Remnant  <scott@netsplit.com>
-
 	* config/mailnotify (func_sendmail): Look for sendmail in a
 	couple of common non-PATH locations as well.
 
-2004-02-12  Scott James Remnant  <scott@netsplit.com>
-
 	* ltmain.in: Fix typo: macro's -> macros.
-
-2004-02-12  Scott James Remnant  <scott@netsplit.com>
 
 	* ltmain.in: Correct definition of basename sed expression to
 	not include single quotes.
