--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-13  Scott James Remnant  <scott@netsplit.com>
+
+	* Makefile.am (pkgmacro_DATA): We have to distribute
+	m4/ltversion.m4 because it can be needed before the Makefile
+	that generates it exists.
+
 2004-02-13  Gary V. Vaughan  <gary@gnu.org>
 
 	* commit (MKSTAMP): Look for mkstamp in the right place.
